javascript work completed

--- a/index.html
+++ b/index.html
@@ -483,10 +483,27 @@
                                         class="input input-bordered text-[#1313184C] focus:outline-none" required />
                                 </div>
                                 <div class="form-control order-5">
-                                    <button id="next-btn"  onclick="openModal()"
+                                    <button id="next-btn" disabled onclick=""
                                         class=" bg-[#1DD100] text-[#FFF]  py-2 px-4 rounded-lg  font-bold text-base hover:scale-[100.8%] duration-300 ease-in-out">
                                         Next
                                     </button>
+
+                                    <!-- <label  id="next-btn" disabled for="my_modal_6" class=" bg-[#1DD100] text-[#FFF]  py-2 px-4 rounded-lg font-bold text-base hover:scale-[100.8%] duration-300 ease-in-out">open modal</label>
+
+                                    
+                                    <input type="checkbox" id="my_modal_6" class="modal-toggle" />
+                                    <div class="modal" role="dialog">
+                                      <div class="modal-box">
+                                        <h3 class="font-bold text-lg">Hello!</h3>
+                                        <p class="py-4">This modal works with a hidden checkbox!</p>
+                                        <div class="modal-action">
+                                          <label for="my_modal_6" class="btn bg-[#1DD100]">Continue</label>
+                                        </div>
+                                      </div>
+                                    </div> -->
+
+
+
                                 </div>
                             </div>
                         </form>
