--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
 
     <style>
@@ -22,6 +22,10 @@
 
         .raleway-font {
             font-family: "Raleway", sans-serif;
+        }
+
+        .roboto-font {
+            font-family: "Roboto", sans-serif;
         }
 
         li {
@@ -108,7 +112,8 @@
                     view the
                     results directly within the app. The integrated testing features
                     allow for a streamlined</p>
-                <button onclick="goToBusTicket()" class="btn text-black bg-[#1DD100] border-0 raleway-font font-bold text-lg">Buy Ticket</button>
+                <button onclick="goToBusTicket()"
+                    class="btn text-black bg-[#1DD100] border-0 raleway-font font-bold text-lg">Buy Ticket</button>
             </div>
 
         </div>
@@ -440,11 +445,12 @@
                         <hr class="border-2">
                         <div class="flex justify-between">
                             <h4 class="font-bold">Total Price</h4>
-                            <h4>BDT <span id="total-price">0</span></h4>
+                            <h4 class="font-bold">BDT <span id="total-price">0</span></h4>
                         </div>
-                        <label id="discount-section"  class="input input-bordered flex items-center gap-2 mt-2 relative">
+                        <label id="discount-section" class="input input-bordered flex items-center gap-2 mt-2 relative">
                             <input id="coupon-text" disabled type="text" class="grow" placeholder="Have any coupon?" />
-                            <button id="coupon-btn" onclick="discountCalculate()" disabled class="btn btn-sm bg-[#1DD100] text-white lg:px-4 absolute right-2">Apply</button>
+                            <button id="coupon-btn" onclick="discountCalculate()" disabled
+                                class="btn btn-sm bg-[#1DD100] text-white lg:px-4 absolute right-2">Apply</button>
                         </label>
                         <div id="discount" class="flex justify-between hidden">
                             <h4 class="font-bold">Discount</h4>
@@ -483,26 +489,34 @@
                                         class="input input-bordered text-[#1313184C] focus:outline-none" required />
                                 </div>
                                 <div class="form-control order-5">
-                                    <button id="next-btn" disabled onclick=""
+                                    <button id="next-btn" disabled onclick="my_modal_5.showModal()"
                                         class=" bg-[#1DD100] text-[#FFF]  py-2 px-4 rounded-lg  font-bold text-base hover:scale-[100.8%] duration-300 ease-in-out">
                                         Next
                                     </button>
 
-                                    <!-- <label  id="next-btn" disabled for="my_modal_6" class=" bg-[#1DD100] text-[#FFF]  py-2 px-4 rounded-lg font-bold text-base hover:scale-[100.8%] duration-300 ease-in-out">open modal</label>
+                                    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                        <div class="modal-box">
+                                            <div class="flex flex-col justify-center items-center">
+                                                <img src="images/success.png" alt="">
+                                                <h3 class="font-bold text-xl text-[#1DD100] roboto-font py-4">SUCCESS</h3>
+                                                <p class="font-medium roboto-font text-[#4A4A4A]">Thank you for Booking Our Bus Seats.</p>
+                                                <p class="font-medium roboto-font text-[#4A4A4A]"> We are working hard to find the best service and
+                                                    deals for you. </p>
+                                                <p class="roboto-font text-[#4A4A4A] py-2">Shortly you will find a confirmation in your email.</p>
+                                            </div>
 
-                                    
-                                    <input type="checkbox" id="my_modal_6" class="modal-toggle" />
-                                    <div class="modal" role="dialog">
-                                      <div class="modal-box">
-                                        <h3 class="font-bold text-lg">Hello!</h3>
-                                        <p class="py-4">This modal works with a hidden checkbox!</p>
-                                        <div class="modal-action">
-                                          <label for="my_modal_6" class="btn bg-[#1DD100]">Continue</label>
+                                            <div class="modal-action">
+                                                <form method="dialog">
+                                                    <!-- if there is a button in form, it will close the modal -->
+                                                    <div class="w-full mx-auto flex justify-center items-center">
+                                                        <button onclick="closeModal()"
+                                                            class="btn btn-sm bg-[#1DD100] text-white px-14 rounded-full">Continue</button>
+
+                                                    </div>
+                                                </form>
+                                            </div>
                                         </div>
-                                      </div>
-                                    </div> -->
-
-
+                                    </dialog>
 
                                 </div>
                             </div>
