--- a/index.html
+++ b/index.html
@@ -107,11 +107,8 @@
             <div class="flex flex-col justify-center items-center h-full space-y-6">
                 <h1 class="text-center font-extrabold text-3xl lg:text-6xl raleway-font text-white">End-to-End Travel
                     with</h1>
-                <h1 class="text-center font-extrabold text-3xl lg:text-6xl raleway-font text-[#1DD100]">P Paribahan</h1>
-                <p class="w-full lg:w-2/3 inter-font text-white text-center font-normal">Yes, you can run unit tests and
-                    view the
-                    results directly within the app. The integrated testing features
-                    allow for a streamlined</p>
+                <h1 class="text-center font-extrabold text-3xl lg:text-6xl raleway-font text-[#1DD100]">OVI Paribahan</h1>
+                <p class="w-full lg:w-2/3 inter-font text-white text-center font-normal">OVI Bus Service provides reliable and comfortable transportation, boasting modern fleets, convenient routes, and a commitment to punctuality and safety</p>
                 <button onclick="goToBusTicket()"
                     class="btn text-black bg-[#1DD100] border-0 raleway-font font-bold text-lg">Buy Ticket</button>
             </div>
@@ -188,10 +185,8 @@
         class="mt-10 lg:mt-12 lg:px-10 xl:px-20  border-t-2 border-[#1DD100] rounded-tl-3xl bg-[#F7F8F8]  rounded-tr-3xl border-l-0 border-r-0 border-b-0 p-2 lg:p-14">
         <section class="container mx-auto lg:mt-12 lg:px-20 space-y-4">
             <div class="flex flex-col items-center gap-6  ">
-                <h1 class="font-bold text-4xl text-[#030712] raleway-font mt-4">P.H Paribahan</h1>
-                <p class="w-full lg:w-1/2 text-[#03071266] text-center inter-font">Yes, you can run unit tests and view
-                    the
-                    results directly within the app. The integrated testing features allow for a streamlined .</p>
+                <h1 class="font-bold text-4xl text-[#030712] raleway-font mt-4">OVI Paribahan</h1>
+                <p class="w-full lg:w-1/2 text-[#03071266] text-center inter-font">Online ticketing offers convenient, user-friendly platforms for booking tickets, saving time, and providing hassle-free access to events, travel, or experiences.</p>
                 <div class="w-full flex flex-col lg:flex-row bg-white rounded-xl">
                     <div class="flex w-full lg:w-4/5 flex-col justify-center items-start lg:pl-12 space-y-1">
                         <div class="w-full space-y-4">
@@ -265,7 +260,7 @@
 
                             <div class="flex">
                                 <img src="images/seat-green-filled.png" alt="">
-                                <span>Selected</span>
+                                <span class="text-[#1DD100] font-semibold">Selected</span>
                             </div>
                         </div>
                         <hr class="border-2 border-dashed mt-2 mb-6">
@@ -564,6 +559,7 @@
     </footer>
 
     <script src="scripts/utility.js"></script>
+    <script src="scripts/ticketing.js"></script>
 
 </body>
 
