--- a/index.html
+++ b/index.html
@@ -484,20 +484,19 @@
                                         class="input input-bordered text-[#1313184C] focus:outline-none" required />
                                 </div>
                                 <div class="form-control order-5">
-                                    <button id="next-btn" disabled onclick="my_modal_5.showModal()"
+                                    <button id="next-btn" disabled onclick="my_modal.showModal()"
                                         class=" bg-[#1DD100] text-[#FFF]  py-2 px-4 rounded-lg  font-bold text-base hover:scale-[100.8%] duration-300 ease-in-out">
                                         Next
                                     </button>
-
-                                    <dialog id="my_modal_5" class="modal modal-bottom sm:modal-middle">
+                                    <dialog id="my_modal" class="modal modal-bottom sm:modal-middle">
                                         <div class="modal-box">
                                             <div class="flex flex-col justify-center items-center">
                                                 <img src="images/success.png" alt="">
                                                 <h3 class="font-bold text-xl text-[#1DD100] roboto-font py-4">SUCCESS</h3>
-                                                <p class="font-medium roboto-font text-[#4A4A4A]">Thank you for Booking Our Bus Seats.</p>
-                                                <p class="font-medium roboto-font text-[#4A4A4A]"> We are working hard to find the best service and
+                                                <p class="font-medium roboto-font text-[#4A4A4A] text-center">Thank you for Booking Our Bus Seats.</p>
+                                                <p class="font-medium roboto-font text-[#4A4A4A] text-center"> We are working hard to find the best service and
                                                     deals for you. </p>
-                                                <p class="roboto-font text-[#4A4A4A] py-2">Shortly you will find a confirmation in your email.</p>
+                                                <p class="roboto-font text-[#4A4A4A] py-2 text-center">Shortly you will find a confirmation in your email.</p>
                                             </div>
 
                                             <div class="modal-action">
